MFC r285701:

Use fixed date/time (the time choosen was the time the import was done
on -HEAD) in libntp so we can make reproducible build.

PR:		bin/201661
Differential Revision:	https://reviews.freebsd.org/D3122

While I'm there also remove libmd from linkage as reported in bin/201738

PR:		bin/201738
Submitted by:	John Marshall